samples/_failures_safe/1761271326_17c046_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f537bba3.c: In function ‘main’:
./samples/SAFE/__tmp_f537bba3.c:180:5: error: expected expression at end of input
  180 |     if (len > 0 && input_buffer[len -
      |     ^~
./samples/SAFE/__tmp_f537bba3.c:180:5: error: expected declaration or statement at end of input
